# document-service

./: .dockerignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
app/: auth_utils.py  broadcast.py  celery.py  config.py  database.py  main.py  redis.py  scheduler.py
app/core/: lock_manager.py  message_handler.py  ws_connection_manager.py
app/core/crud_router/: __init__.py  crud_router.py  models.py
app/core/repository/: base.py  mongo.py
app/crud_router/: crud_router.py  models.py
app/crud_router/repository/: base.py  mongo.py
app/dependencies/: _context.py  broadcast.py  database.py  document.py  repository.py  user.py
app/models/: document.py  editor_events.py  style.py  user.py
app/routers/: auth_utils.py  cache.py  documents.py  utils.py
app/routers/documents/: endpoints.py  endpoints_ws.py  http.py  router.py  ws.py
app/routers/documents/endpoints_ws/: __init__.py  apply_event.py  endpoints.py  message_handler.py  ws_connection_manager.py
app/routers/styles/: endpoints.py  http.py  router.py
app/scheduler/: scheduler.py  tasks.py
manager/: cli.py
manager/commands/: documents.py
scripts/: cli.py
scripts/commands/: documents.py
tests/: conftest.py  test_document.py  test_document_edit.py  test_documents.py  test_styles.py
tests/crud_suite/: __init__.py  _tests.py  base.py
tests/utils/: common.py  document.py  style.py  user.py
