[tool.poetry]
name = "document-service"
version = "0.1.0"
description = ""
authors = ["zandari <kirillgluhih1@yandex.ru>"]
readme = "README.md"
package-mode = false
packages = [
    {include="app"},
    {include="scripts"},
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.11"}
motor = "^3.7.0"
websockets = "^15.0.1"
broadcaster = "^0.3.1"
renderer-definition = {git = "https://github.com/cloudoc-d/renderer-definition.git"}
redis = {extras = ["hiredis"], version = "^5.2.1"}
apscheduler = "^3.11.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pymongo = "^4.12.0"

[tool.poetry.group.cli-tools]
optional = true

[tool.poetry.group.cli-tools.dependencies]
faker = "^37.1.0"

[tool.poetry.scripts]
cli-tools = "scripts.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
